# weissman-cybersecurity

./: .dockerignore  .env.example  .envrc  .envrc.private.example  .gitignore  AUDIT_ENTERPRISE.md  AUDIT_SIMULATION_REMOVAL.md  BOT_FULL_AUDIT.md  BOT_FULL_SPEC.md  BOT_SPEC_ANALYSIS.md  Cargo.toml  DATA_SOURCE_AUDIT_PDF_CSV.md  Dockerfile.api  Dockerfile.worker  ENTERPRISE_UPGRADE.md  GLOBAL_ENTERPRISE_UPGRADE.md  IDEAS_FOR_ENTERPRISE_AND_TRUST.md  IMPLEMENTATION_ENTERPRISE_TRUST.md  IMPROVEMENTS_AND_RECOMMENDATIONS.md  IMPROVEMENT_ROADMAP_WORLD_CLASS.md  LIBRARIES.md  LIVE_DATA_AUDIT.md  PRODUCTION.env.template  PRODUCTION.txt  README.md  ROADMAP_ENTERPRISE_TOP20.md  SUMMARY.md  WEISSMAN_FULL_SPEC.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  config.yaml  docker-compose.yml  existing_ids.txt  flake.nix  install_deps.sh  main.py  migrate_db.py  package-lock.json  (+7 more)
alembic/: env.py
backend/weissman-core/: Cargo.toml
backend/weissman-core/src/: errors.rs  lib.rs  openapi.rs  tls_policy.rs
backend/weissman-core/src/models/: config.rs  engine.rs  finding.rs  finding_metadata.rs  ids.rs  mod.rs  poc.rs  roe.rs  semantic.rs
backend/weissman-engines/: Cargo.toml
backend/weissman-engines/src/: context.rs  engine_trait.rs  factory.rs  lib.rs  llm_handshake.rs  llm_json_repair.rs  llm_sanitize.rs  openai_chat.rs  result.rs  stealth.rs
backend/weissman-engines/src/fuzzer/: llm_path_fuzz.rs  mod.rs  semantic.rs  wordlist.rs
backend/weissman-engines/src/osint/: engine.rs  mod.rs
backend/weissman-server/: Cargo.toml
backend/weissman-server/src/: database.rs  lib.rs  main.rs
backend/weissman-server/src/api/: json_policy.rs  mod.rs  routes.rs
backend/weissman-server/src/middleware/: cors.rs  mod.rs  rate_limiter.rs  security_headers.rs
crates/weissman-db/: Cargo.toml
crates/weissman-db/migrations/: 20250328119999_app_database_role.sql  20250328120000_initial_schema.sql  20250328120001_seed_default_tenant.sql  20250328120002_row_level_security.sql  20250328120005_pipeline_scope_client_id_text.sql  20250330120006_phase3_cloud_compliance.sql  20250401120000_phase4_deception_heal.sql  20250406120000_llm_vllm_system_configs.sql  20260402120000_paddle_billing_schema.sql  20260409103000_user_refresh_tokens.sql  20260413120000_generative_fuzz_wins.sql  20260414120000_oast_interaction_hits.sql  20260416200000_rbac_hardening_audit_sequences_rls_schema.sql  20260418120000_sovereign_auth_hardening.sql  20260420120000_sovereign_c2_fuzz_staging.sql  20260421120000_supreme_council_memory.sql  20260422120000_sovereign_learning_buffer.sql  20260423120000_genesis_protocol_vault.sql  20260424120000_genesis_suspended_graphs.sql  20260425120000_ceo_command_center.sql  20260427100000_finding_status_workflow.sql  20260428120000_council_hitl_queue.sql
crates/weissman-db/src/: auth_access.rs  auth_rotation.rs  env_bootstrap.rs  job_queue.rs  lib.rs  llm_usage.rs
crates/weissman-db/tests/: rls_cross_tenant.rs
crates/weissman-oast-server/: .env.example  Cargo.toml
crates/weissman-oast-server/src/: main.rs  panic_shield.rs
crates/weissman-worker/: Cargo.toml
crates/weissman-worker/src/: main.rs
deploy/: Caddyfile  PRODUCTION.txt  (+12 more)
fingerprint_engine/: Cargo.toml
fingerprint_engine/config/: README.md  payload_signatures.json
fingerprint_engine/fonts/: README.md
fingerprint_engine/migrations/: 20250328120003_grants.sql  20250328120004_auth_bypass_role.sql  20250402120000_lookup_deception_deployed.sql  20250403120000_phase5_swarm_sbom_containment.sql  20250404120000_phase6_llm_cicd_sealed_poc.sql  20250428120000_phase7_ot_edge_pqc.sql  20250501120000_weissman_auth_grants_configs_sequences.sql  20260401120000_saas_billing_onboarding.sql  20260406180000_phase8_phase9_audit_user_retention.sql  20260407140000_intel_schema_async_jobs.sql  20260407160000_ceo_default_scan_interval_rpc.sql  20260408120000_async_job_result_json.sql  20260410120000_phase5_phase7_llm_metering_trace.sql  20260411120000_auto_heal_worker_queue.sql  20260412120000_phase2_deception_swarm.sql  20260413120000_generative_fuzz_wins.sql  20260414120000_oast_interaction_hits.sql  20260415190000_risk_graph_omni_assets.sql  20260417040000_deception_oast_canary_hook.sql  20260418120000_sovereign_auth_hardening.sql  20260421120000_supreme_council_memory.sql  20260422120000_sovereign_learning_buffer.sql  20260426100000_ceo_rbac_superadmin.sql  20260428120000_council_hitl_queue.sql  20260428120001_oast_probe_tokens.sql  20260428130000_tenant_idps_vendor_hint.sql
fingerprint_engine/src/: admin_users.rs  advanced_ai_engines.rs  advanced_apt_engines.rs  advanced_cloud_engines.rs  advanced_crypto_engines.rs  advanced_data_engines.rs  advanced_malware_engines.rs  advanced_mobile_engines.rs  advanced_network_engines.rs  advanced_ot_engines.rs  advanced_recon_engines.rs  advanced_social_engines.rs  advanced_stealth_engines.rs  advanced_supply_chain_engines.rs  advanced_web_engines.rs  adversarial_ml_engine.rs  ai_redteam_engine.rs  antiforensics_engine.rs  archival_engine.rs  asm_engine.rs  async_job_executor.rs  async_jobs.rs  audit_log.rs  auth_jwt.rs  auth_refresh.rs  auto_domain_discovery_engine.rs  auto_heal.rs  auto_heal_job.rs  autonomous_identity.rs  autonomous_pentest_engine.rs  aws_attack_engine.rs  azure_attack_engine.rs  bgp_dns_hijacking_engine.rs  ble_rf_engine.rs  bola_idor_engine.rs  cache_poisoning_engine.rs  cicd_ast_scan.rs  cicd_interceptor.rs  cicd_pipeline_engine.rs  cloud_containment_engine.rs  (+142 more)
fingerprint_engine/src/billing/: mod.rs  webhook.rs
fingerprint_engine/src/ceo/: god_mode.rs  hpc.rs  mod.rs  ops_status.rs  safe_mode.rs  sovereign.rs  strategy.rs  tenant_engines.rs  vault.rs  war_room.rs
fingerprint_engine/src/http/: ceo_rbac.rs  client_ip.rs  handler_fragments.rs  mod.rs  serve.rs  tenant_scan_limit.rs
fingerprint_engine/src/orchestrator/: discovery_ui_snapshot.rs  mod.rs
fingerprint_engine/tests/: rls_policy_contract.rs  rls_verification.sql
fingerprint_engine/tools/: emit_rest.py  gen_inc.py
fuzz_core/: Cargo.toml
fuzz_core/src/: lib.rs
(+265 files in other folders)
