[package]
name = "fuzz_core"
version = "0.1.0"
edition = "2021"
description = "Pure mutation + anomaly scoring for HTTP fuzzing (native + wasm32-unknown-unknown)"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"
