[package]
name = "weissman-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "Weissman shared domain models, stable IDs, and unified API errors (OpenAPI-ready)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
utoipa = { version = "5", features = [] }
urlencoding = "2"
