[package]
name = "weissman-engines"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "SOC scan engines: OSINT, LLM/vLLM fuzzers, semantic OpenAPI logic (no HTTP routing)"

[dependencies]
weissman-core = { path = "../weissman-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
urlencoding = "2"
regex = "1"
metrics = "0.24"
quick-xml = "0.31"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
