[package]
name = "weissman-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.1"
description = "Enterprise Axum API: rate limits, security headers, tuned DB pools"

[[bin]]
name = "weissman-server"
path = "src/main.rs"

[dependencies]
fingerprint_engine = { path = "../../fingerprint_engine" }
weissman-db = { path = "../../crates/weissman-db" }
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["set-header", "trace", "cors"] }
governor = "0.6"
nonzero_ext = "0.3"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
