[package]
name = "weissman-db"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "PostgreSQL pools, sqlx migrations, RLS via app.current_tenant_id"

[dependencies]
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "migrate", "chrono", "uuid"] }
bcrypt = "0.16"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
