[package]
name = "weissman-oast-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.1"
description = "Distributed OAST listener: HTTP + DNS interaction logging to PostgreSQL"

[[bin]]
name = "weissman-oast-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full", "net", "signal"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
