[package]
name = "weissman-worker"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "Postgres-backed async job consumer (heartbeats, retries, DLQ)"

[[bin]]
name = "weissman-worker"
path = "src/main.rs"

[dependencies]
fingerprint_engine = { path = "../../fingerprint_engine" }
weissman-db = { path = "../weissman-db" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde_json = "1"
hostname = "0.4"
